--- a/crypto.html
+++ b/crypto.html
@@ -5,6 +5,7 @@
         <title>Ressources Cryptographie - Landryl</title>
         <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|VT323" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
         <h1>Ressources/Cryptographie</h1>
