--- a/ricing.html
+++ b/ricing.html
@@ -5,6 +5,7 @@
         <title>Ressources Ricing - Landryl</title>
         <link href="https://fonts.googleapis.com/css?family=Cutive+Mono|VT323" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
         <h1>Ressources/Ricing</h1>
